fixed suggestion overflow

--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -49,7 +49,8 @@
   list-style-type: none;
   font-size: 13px;
   font-weight: none;
-  flex-wrap: none;
+  flex-wrap: nowrap;
+  white-space: nowrap;
   overflow: hidden;
 }
 .suggestionHighlighted {
